# polyclinic-registry-system

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  create.sh  debug-build-run.sh  docker-compose.yml  run-tests.sh
linux-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  polyclinic_registry_system
linux-debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
src/: main.cpp  resources.qrc
src/adapters/: UtilsAdapter.cpp  UtilsAdapter.h
src/core/: EnvLoader.cpp  EnvLoader.h  common.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/models/: BaseModel.h  Polyclinic.cpp  Polyclinic.h
src/models/entities/: Appointment.cpp  Appointment.h  AppointmentTicket.cpp  AppointmentTicket.h  BaseModel.h  Department.cpp  Department.h  Disease.h  District.cpp  District.h  Doctor.cpp  Doctor.h  MedicalCard.cpp  MedicalCard.h  MedicalDocument.cpp  MedicalDocument.h  Patient.cpp  Patient.h  Polyclinic.cpp  Polyclinic.h  Registrar.cpp  Registrar.h  Room.cpp  Room.h  Schedule.cpp  Schedule.h  ScheduleException.cpp  ScheduleException.h  Service.cpp  Service.h  ServiceAppointment.cpp  ServiceAppointment.h  SickLeave.cpp  SickLeave.h  SickLeaveRegister.cpp  SickLeaveRegister.h  Specialty.cpp  Specialty.h  Street.cpp  Street.h  (+6 more)
src/models/entities.old/: Appointment.cpp  Disease.cpp  Doctor.cpp  Patient.h  Service.cpp  ServiceAppointment.h  SickLeave.h  Specialty.cpp  Symptom.cpp  Visit.cpp  VisitSymptom.cpp
src/models/views/: AppointmentFullInfoView.cpp  AppointmentFullInfoView.h  DoctorFullInfoView.cpp  DoctorFullInfoView.h  MedicalDocumentFullInfoView.cpp  MedicalDocumentFullInfoView.h  PatientsByDistrictView.cpp  PatientsByDistrictView.h  SickLeaveFullInfoView.cpp  SickLeaveFullInfoView.h  SickLeaveRegisterFullView.cpp  SickLeaveRegisterFullView.h  ViewModel.h
src/qml/: Main.qml
src/qml/components/: DatePicker.qml  DoctorDelegate.qml  PatientDelegate.qml  QuickActionButton.qml  Sidebar.qml  SidebarButton.qml  StatsBadge.qml  StatsCard.qml  TableHeaderCell.qml  Titlebar.qml
src/qml/pages/: AddPolyclinicView.qml.old  AdminView.qml  AppointmentView.qml  AppointmentsJournalView.qml  CardIndexView.qml  DashboardView.qml  DocumentsView.qml
src/qml/screens/: MainMenuScreen.qml  MainScreen.qml  PolyclinicSelectionScreen.qml
src/repositories/: GenericRepository.cpp  GenericRepository.h  PolyclinicRepository.cpp  PolyclinicRepository.h  ViewsRepository.cpp  ViewsRepository.h
src/repositories/criteria/: Criteria.cpp  Criteria.h  CriteriaHelpers.cpp  CriteriaHelpers.h
src/services/: GenericService.cpp  GenericService.h  PolyclinicService.cpp  PolyclinicService.h  ViewsService.cpp  ViewsService.h
src/templates/: adapter.cpp.in  adapter.h.in  adapterModel.cpp.template  adapterModel.h.template  adapterView.cpp.template  adapterView.h.template
tests/: CMakeLists.txt  main.cpp
tests/models/: ModelsTests.cpp  PolyclinicTest.cpp
tests/repositories/: GenericRepositoryTests.cpp  PolyclinicRepositoryTest.cpp
tests/services/: GenericServiceTests.cpp  PolyclinicServiceTest.cpp
